# cfancontrol

./: CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py
cfancontrol/: __main__.py  app.py  devicesensor.py  fancontroller.py  fancurve.py  fanmanager.py  graphs.py  gui.py  hwsensor.py  log.py  nvidiasensor.py  profilemanager.py  pwmfan.py  sensor.py  sensormanager.py  settings.py
cfancontrol/ui/: cfanabout.py  cfanabout.ui  cfanmain.py  cfanmain.ui  resources_rc.py  switch.py
cfancontrol/ui/resources/: resources.qrc
cfancontrol/ui/themes/: dark.conf  light.conf
