[metadata]
name = cfancontrol
version = attr: cfancontrol.__version__
url =
description = Fan controller for the Corsair Commander (Pro)
author = maclarsson
author_email =
keywords =
  corsair
  commander pro
  commander
  fan-controller
  kraken
  hydro
project_urls:
  Documentation =
  Source =

[options]
packages =
    cfancontrol
    cfancontrol.ui
    cfancontrol.ui.resources
include_package_data = True
pythons_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
  setuptools~=45.2.0
  pyqtgraph~=0.12.4
  liquidctl~=1.6.1
  numpy~=1.17.4
  PyYAML~=5.3.1
  PySensors~=0.0.4
  pid~=3.0.4
  PyQt5~=5.14.1
  pyxdg~=0.28

[options.package_data]
cfancontrol = *
cfancontrol.ui = *
cfancontrol.ui.resources = *

[options.entry_points]
console_scripts =
  cfancontrol = cfancontrol.__main__:main
