[metadata]
name = cfancontrol
version = attr: cfancontrol.__version__
url =
description = Fan controller for the Corsair Commander (Pro)
author = maclarsson
author_email =
keywords =
  corsair
  commander pro
  commander
  fan-controller
  kraken
  hydro
project_urls:
  Documentation =
  Source =

[options]
packages =
    cfancontrol
    cfancontrol.ui
    cfancontrol.ui.resources
    cfancontrol.ui.themes
include_package_data = True
pythons_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
  setuptools~=45.2.0
  pyqtgraph
  liquidctl
  numpy
  PyYAML
  PySensors
  pid
  PyQt5
  pyxdg

[options.package_data]
cfancontrol = *
cfancontrol.ui = *
cfancontrol.ui.resources = *
cfancontrol.ui.themes = *

[options.entry_points]
console_scripts =
  cfancontrol = cfancontrol.__main__:main
